corrected few terms

--- a/LSTM-Trainer.ipynb
+++ b/LSTM-Trainer.ipynb
@@ -1306,6 +1306,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "79945\n",
+      "79948\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(train_data_loader) * batch_size)\n",
+    "print(len(df_train))\n",
+    "# Not same since we are dropping some terms which do not match up\n",
+    "N_train = len(train_data_loader) * batch_size\n",
+    "N_test = len(test_data_loader) * batch_size"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 64,
    "metadata": {},
    "outputs": [
@@ -1344,19 +1366,22 @@
     "        running_loss += loss.item()\n",
     "        if idx % 100 == 0:\n",
     "            print(\"epoch {} loss {}\".format(epoch, running_loss))\n",
-    "        writer.add_scalar('Loss/train', loss.item(), idx)\n",
+    "    writer.add_scalar('Loss/train', running_loss/N_train, epoch)\n",
     "    # validation set is still left to create\n",
     "    # Now to test the validation set\n",
     "    correct = 0\n",
     "    total = 0\n",
+    "    test_loss = 0\n",
     "    with torch.no_grad():\n",
     "        for idx,(X,X_len,y) in enumerate(test_data_loader):\n",
     "            X, X_len, y = put_elements_to_device(a=X, b=torch.tensor(X_len), c=y, device=device)\n",
     "            outputs = model(X,X_len)\n",
+    "            loss = criterion(outputs, y)\n",
+    "            test_loss += loss.item()\n",
     "            _, predicted = torch.max(outputs.data, 1)\n",
     "            total += X.size(0)\n",
     "            correct += (predicted == y).sum().item()\n",
-    "        writer.add_scalar('Loss/train', loss.item(), idx)\n",
+    "    writer.add_scalar('Loss/train', test_loss/N_test, epoch)\n",
     "    print('Accuracy of the network on the test samples: %d %%' % (\n",
     "        100 * correct / total))\n",
     "        \n",
