--- a/Guided_LSTM.ipynb
+++ b/Guided_LSTM.ipynb
@@ -6,6 +6,7 @@
       "name": "Guided-LSTM.ipynb",
       "provenance": [],
       "collapsed_sections": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +31,7 @@
       "metadata": {
         "id": "nUEgRNmWuXym",
         "colab_type": "code",
-        "outputId": "a5ceb4f8-7c6c-41a5-e2af-8a0eb639cfd9",
+        "outputId": "25d04ef2-c713-4113-8663-4cc02b06bd0f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 87
@@ -48,7 +49,7 @@
         "from nltk.corpus import stopwords\n",
         "stops1 = set(stopwords.words(\"english\"))\n"
       ],
-      "execution_count": 0,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -141,7 +142,7 @@
       },
       "source": [
         "# Some constants\n",
-        "batch_size = 5"
+        "batch_size = 1000"
       ],
       "execution_count": 0,
       "outputs": []
@@ -251,7 +252,7 @@
       "metadata": {
         "id": "k1o7a9BPvSea",
         "colab_type": "code",
-        "outputId": "94caeafc-c175-43f3-e78d-10d35b8cd4cf",
+        "outputId": "480f959f-9c48-447b-e5b4-457359daafd8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -260,7 +261,7 @@
       "source": [
         "df_train.Recipe_id_numeric[4]"
       ],
-      "execution_count": 0,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -281,7 +282,7 @@
       "metadata": {
         "id": "2TUw5ZEavUid",
         "colab_type": "code",
-        "outputId": "fc6b5423-1ba0-47a3-e5e0-c9813e05ee0e",
+        "outputId": "50851a4d-772b-4e79-878c-9d0ef8794928",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -290,7 +291,7 @@
       "source": [
         "train_dataset[0]"
       ],
-      "execution_count": 0,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -311,36 +312,56 @@
       "metadata": {
         "id": "PJ8uj-EovcGq",
         "colab_type": "code",
-        "outputId": "6b5fec36-7453-4fa6-f0f9-c0ff1d6cad92",
+        "outputId": "03cb1931-6b9f-4802-dd5c-02964aa006ec",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 225
+          "height": 139
         }
       },
       "source": [
         "for (X,X_len,y) in train_data_loader:\n",
         "    print(X)\n",
-        "    print(X_len)\n",
-        "    print(y)\n",
         "    break"
       ],
-      "execution_count": 0,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "tensor([[ 47, 349,  20, 161,  99,   1,  67, 384,  49,  33,  21,  36,  57, 279,\n",
-            "         342, 187,   7, 114],\n",
-            "        [ 44,  20, 242, 438,   7, 159,  42,  43, 260,   0,   0,   0,   0,   0,\n",
-            "           0,   0,   0,   0],\n",
-            "        [ 29,   3, 124,  19,  39,  95,  30,  61, 225,   0,   0,   0,   0,   0,\n",
-            "           0,   0,   0,   0],\n",
-            "        [ 20,  44,  17, 107, 142,  49,  21,  19,   0,   0,   0,   0,   0,   0,\n",
-            "           0,   0,   0,   0],\n",
-            "        [252, 208,  20,  24, 203, 542,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-            "           0,   0,   0,   0]])\n",
-            "[18, 9, 9, 8, 6]\n",
-            "tensor([ 0,  8, 12,  0,  5])\n"
+            "tensor([[129,  70,  36,  ...,  24,  89, 243],\n",
+            "        [ 24,  42,  49,  ...,   0,   0,   0],\n",
+            "        [ 39,  55, 243,  ...,   0,   0,   0],\n",
+            "        ...,\n",
+            "        [ 27,   0,   0,  ...,   0,   0,   0],\n",
+            "        [131,   0,   0,  ...,   0,   0,   0],\n",
+            "        [221,   0,   0,  ...,   0,   0,   0]])\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ySCeHYf4wotf",
+        "colab_type": "code",
+        "outputId": "71737f57-93b8-4ccd-da66-bf469e2debd5",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "source": [
+        "# Moving things to GPU\n",
+        "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+        "print(device)"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "cuda\n"
           ],
           "name": "stdout"
         }
@@ -356,7 +377,9 @@
       "source": [
         "class RecipePredictor(nn.Module):\n",
         "    \n",
-        "    def __init__(self, vocab_size, hidden_dim, embedding_dim, batch_size, output_dim):\n",
+        "    def __init__(self, vocab_size, hidden_dim, embedding_dim,\n",
+        "                 batch_size, output_dim, device):\n",
+        "        \n",
         "        super(RecipePredictor, self).__init__()\n",
         "        self.vocab_size = vocab_size\n",
         "        self.output_dim = output_dim\n",
@@ -370,8 +393,9 @@
         "        self.init_hidden() # TODO:  This should happen at the beginning of each epoch\n",
         "        \n",
         "    def init_hidden(self):\n",
-        "        self.h_n = torch.randn(1, self.batch_size, self.hidden_dim)\n",
-        "        self.c_n = torch.randn(1, self.batch_size, self.hidden_dim)\n",
+        "        self.h_n = torch.randn((1, self.batch_size, self.hidden_dim) ,device=device)\n",
+        "        self.c_n = torch.randn((1, self.batch_size, self.hidden_dim) , device=device)\n",
+        "        \n",
         "        \n",
         "    \n",
         "    def forward(self, input_sequence, max_len):\n",
@@ -423,52 +447,90 @@
       "source": [
         "num_recipes = recipe_vocabulary + 1\n",
         "model = RecipePredictor(vocab_size=vocab_size, hidden_dim=512, embedding_dim=300, batch_size=batch_size,\n",
-        "                       output_dim=num_recipes)"
+        "                       output_dim=num_recipes, device=device)"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nIP9G3HYF4tA",
+        "colab_type": "text"
+      },
+      "source": [
+        "### I did not put hidden state on cuda and that was an issue. So, it has been corrected"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BiQj9hZ9Fnjr",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 121
+        },
+        "outputId": "7f642f09-a2b2-4a3e-c631-fdf0337c9c3d"
+      },
+      "source": [
+        "model.to(device)"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "RecipePredictor(\n",
+              "  (embedding): Embedding(1153, 300)\n",
+              "  (lstm): LSTM(300, 512)\n",
+              "  (predictor): Linear(in_features=512, out_features=17, bias=True)\n",
+              "  (non_linearity): ReLU()\n",
+              ")"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 17
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "htHpNlREwXMH",
         "colab_type": "code",
-        "outputId": "036b8898-d2b3-42f9-8f40-c2561118984c",
+        "outputId": "507a4e73-3c9a-4aab-a967-b4945e21da2d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 277
+          "height": 156
         }
       },
       "source": [
-        "model(X, torch.tensor(X_len))"
+        "model(X.cuda(), torch.tensor(X_len).cuda())"
       ],
-      "execution_count": 0,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "tensor([[-0.1243,  0.0352,  0.0636,  0.0446,  0.0248,  0.1174,  0.0650,  0.0748,\n",
-              "          0.1017, -0.0285, -0.0722, -0.1552,  0.0567,  0.0761, -0.4016,  0.0074,\n",
-              "          0.2531],\n",
-              "        [ 0.0472, -0.0196, -0.2112,  0.0537, -0.0331,  0.0523, -0.0392, -0.2207,\n",
-              "          0.0740, -0.0726, -0.3089, -0.3189,  0.1394,  0.1757,  0.0067,  0.1906,\n",
-              "         -0.0131],\n",
-              "        [ 0.1656,  0.1994,  0.0592,  0.0142, -0.0989, -0.0683, -0.0934,  0.0474,\n",
-              "          0.1007, -0.0707, -0.2304,  0.0486,  0.1226,  0.1526,  0.0426,  0.0316,\n",
-              "          0.2209],\n",
-              "        [ 0.0229,  0.0763,  0.0403, -0.0182, -0.0252, -0.0771,  0.0806,  0.0205,\n",
-              "          0.1701,  0.1536, -0.0484, -0.1660, -0.2670, -0.0232,  0.2510, -0.0978,\n",
-              "         -0.0428],\n",
-              "        [-0.1517,  0.0475, -0.0226,  0.0896,  0.0544, -0.2032, -0.2437, -0.0679,\n",
-              "          0.1818,  0.2426,  0.0921, -0.1612, -0.1762,  0.1039,  0.0613, -0.1786,\n",
-              "         -0.1541]], grad_fn=<AddmmBackward>)"
+              "tensor([[ 0.2426,  0.2468,  0.1269,  ...,  0.2474,  0.0481, -0.1306],\n",
+              "        [-0.1433,  0.0131,  0.2130,  ..., -0.0695, -0.0562, -0.3213],\n",
+              "        [ 0.1079,  0.0507,  0.0994,  ..., -0.2803, -0.1576,  0.1823],\n",
+              "        ...,\n",
+              "        [-0.0101,  0.0532,  0.4223,  ...,  0.3989,  0.0642, -0.2718],\n",
+              "        [-0.1152,  0.3523, -0.3859,  ..., -0.2631, -0.5250,  0.0990],\n",
+              "        [-0.1229,  0.1882,  0.2236,  ...,  0.0140,  0.2446, -0.3033]],\n",
+              "       device='cuda:0', grad_fn=<AddmmBackward>)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 18
         }
       ]
     },
@@ -505,72 +567,10 @@
         "colab": {}
       },
       "source": [
-        "num_epoch = 2"
+        "num_epoch = 20"
       ],
       "execution_count": 0,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ySCeHYf4wotf",
-        "colab_type": "code",
-        "outputId": "2cc49f9f-ae3c-4626-eecc-838563f73a4e",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        }
-      },
-      "source": [
-        "# Moving things to GPU\n",
-        "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-        "print(device)"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "cuda\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "RMV4vkzcwwqI",
-        "colab_type": "code",
-        "outputId": "bcb84b09-2aa8-4a40-d589-dfba6de9d6e1",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 121
-        }
-      },
-      "source": [
-        "model.to(device)"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "RecipePredictor(\n",
-              "  (embedding): Embedding(1153, 300)\n",
-              "  (lstm): LSTM(300, 512)\n",
-              "  (predictor): Linear(in_features=512, out_features=17, bias=True)\n",
-              "  (non_linearity): ReLU()\n",
-              ")"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 20
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -581,7 +581,6 @@
       },
       "source": [
         "def put_elements_to_device(a,b,c,device):\n",
-        "    print(\"put things on cuda\")\n",
         "    return a.to(device), b.to(device), c.to(device)"
       ],
       "execution_count": 0,
@@ -620,23 +619,51 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "IMXBPIJRG96w",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "outputId": "76786d1f-8a6c-4a30-ca07-2188c17e3ded"
+      },
+      "source": [
+        "print(len(train_data_loader) * batch_size)\n",
+        "print(len(df_train))\n",
+        "# Not same since we are dropping some terms which do not match up\n",
+        "N_train = len(train_data_loader) * batch_size\n",
+        "N_test = len(test_data_loader) * batch_size"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "79000\n",
+            "79948\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "upzCHjdDxKfh",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "baa0241c-7c26-4eaa-b02b-d7fea64afdc9"
       },
       "source": [
         "for epoch in range(num_epoch):\n",
         "    running_loss = 0\n",
-        "    \n",
         "    model.init_hidden()\n",
         "    for idx,(X,X_len,y) in enumerate(train_data_loader):\n",
-        "        print(\"starting guys\")\n",
         "        model.zero_grad()\n",
-        "        \n",
-        "        # X, X_len, y = put_elements_to_device(a=X, b=torch.tensor(X_len), c=y, device=device)\n",
-        "        X = X.cuda()\n",
-        "        # y = y.cuda()\n",
-        "\n",
+        "        X, X_len, y = put_elements_to_device(a=X, b=torch.tensor(X_len), c=y, device=device)\n",
         "        prediction = model(X, X_len)\n",
         "        loss = criterion(prediction, y)\n",
         "        loss.backward(retain_graph=True)\n",
@@ -644,26 +671,37 @@
         "        running_loss += loss.item()\n",
         "        if idx % 100 == 0:\n",
         "            print(\"epoch {} loss {}\".format(epoch, running_loss))\n",
-        "        writer.add_scalar('Loss/train', loss.item(), idx)\n",
+        "    writer.add_scalar('Loss/train', running_loss/N_train, epoch)\n",
         "    # validation set is still left to create\n",
         "    # Now to test the validation set\n",
         "    correct = 0\n",
         "    total = 0\n",
+        "    test_loss = 0\n",
         "    with torch.no_grad():\n",
         "        for idx,(X,X_len,y) in enumerate(test_data_loader):\n",
         "            X, X_len, y = put_elements_to_device(a=X, b=torch.tensor(X_len), c=y, device=device)\n",
         "            outputs = model(X,X_len)\n",
+        "            loss = criterion(outputs, y)\n",
+        "            test_loss += loss.item()\n",
         "            _, predicted = torch.max(outputs.data, 1)\n",
         "            total += X.size(0)\n",
         "            correct += (predicted == y).sum().item()\n",
-        "        writer.add_scalar('Loss/train', loss.item(), idx)\n",
+        "    writer.add_scalar('Loss/train', test_loss/N_test, epoch)\n",
         "    print('Accuracy of the network on the test samples: %d %%' % (\n",
         "        100 * correct / total))\n",
         "        \n",
         "            "
       ],
       "execution_count": 0,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "epoch 0 loss 2.8605995178222656\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
