--- a/LSTM-Trainer.ipynb
+++ b/LSTM-Trainer.ipynb
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,9 @@
     "from sub_find import *\n",
     "from true_subs import *\n",
     "from constants import *\n",
-    "# from graph_evaluation import *"
+    "# from graph_evaluation import *\n",
+    "from Vocabulary import Vocab\n",
+    "import pickle"
    ]
   },
   {
@@ -371,16 +373,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vindhya_list = ['Cake', 'Salad', 'Noodles', 'Hummus', 'Burger', 'Steak', 'Pie', 'Chicken', 'Custard', 'Chips',\n",
+    "                'Casserole', 'Pasta', 'Pizza', 'Omelette', 'soup', 'sauce']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "25777"
+       "31123"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,21 +404,21 @@
     "for reduced_recipe_object in recipes:\n",
     "    # Honestly this is a shitty attempt since I already did the stemming earlier\n",
     "    # however, I am doing the same again\n",
-    "    counter = counter +  any (stem_title(title) in stem_title(reduced_recipe_object.id) for title in my_list)\n",
+    "    counter = counter +  any (stem_title(title) in stem_title(reduced_recipe_object.id) for title in vindhya_list)\n",
     "    \n",
     "counter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "25.777\n"
+      "31.123\n"
      ]
     }
    ],
@@ -455,58 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Let us quickly build the vocabulary\n",
-    "class Vocab(object):\n",
-    "    \n",
-    "    def __init__(self):\n",
-    "        super(Vocab,self).__init__()\n",
-    "        self.word_2_idx = {}\n",
-    "        self.idx_2_word = {}\n",
-    "        self.max_idx = 0\n",
-    "        self.word_2_idx['<UNK>'] = 0\n",
-    "        self.idx_2_word[0] = '<UNK>'\n",
-    "#         for idx, word in enumerate(words):\n",
-    "#             self.word_2_idx[word] = idx\n",
-    "#             self.idx_2_word[idx] = word\n",
-    "#             self.max_idx += 1\n",
-    "        \n",
-    "    def add_word(self, word):\n",
-    "        if word in self.word_2_idx.keys():\n",
-    "            return\n",
-    "        self.max_idx += 1\n",
-    "        self.word_2_idx[word] = self.max_idx\n",
-    "        self.idx_2_word[self.max_idx] = word\n",
-    "        \n",
-    "    def get_idx(self, word):\n",
-    "        if word not in self.word_2_idx.keys():\n",
-    "            raise ValueError(\"Not acceptable as -- {} does not exist in vocabulary!\".format(word))\n",
-    "        return self.word_2_idx[word]\n",
-    "    \n",
-    "    def get_word(self, idx):\n",
-    "        if idx not in self.idx_2_word.keys():\n",
-    "            raise ValueError(\"Not acceptable as -- {} does not exist in vocabulary!\".format(idx))\n",
-    "        return self.idx_2_word[idx]\n",
-    "    \n",
-    "    def __repr__(self):\n",
-    "        return str(self.word_2_idx)\n",
-    "    \n",
-    "    def check_any_word_in_vocab(self, sentence):\n",
-    "        # Check if sentence has any word in vocabulary\n",
-    "        # highly inefficient but okay :(\n",
-    "        for any_ingredient in sentence.split(\" \"):\n",
-    "            if any_ingredient in self.word_2_idx.keys():\n",
-    "                return True, any_ingredient\n",
-    "        return False, _ # for ease in construct later\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +619,7 @@
        "{'<UNK>': 0, 'cake': 1, 'pasta': 2, 'custard': 3, 'roll': 4, 'stew': 5, 'casserol': 6, 'sauc': 7, 'soup': 8, 'burger': 9, 'pizza': 10, 'salad': 11, 'muffin': 12, 'steak': 13, 'fish': 14, 'ham': 15}"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +639,7 @@
        "16"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +659,7 @@
        "(True, 'cake')"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -829,6 +790,24 @@
    ],
    "source": [
     "len(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## I am pickling both the vocabularies which would be useful later"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('vocab_combined.pkl','wb') as file:\n",
+    "    pickle.dump(recipe_vocabulary, file)\n",
+    "    pickle.dump(ingredient_vocabulary, file)"
    ]
   },
   {
@@ -1296,7 +1275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1306,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1328,14 +1307,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 0 loss 2.659294843673706\n"
+      "epoch 0 loss 2.0085887908935547\n",
+      "epoch 0 loss 102.51984167844057\n",
+      "epoch 0 loss 221.88543963432312\n",
+      "epoch 0 loss 312.94191985577345\n",
+      "epoch 0 loss 409.68190402537584\n"
      ]
     },
     {
@@ -1345,7 +1328,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-64-394759eaaf78>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_len\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mput_elements_to_device\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_len\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprediction\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m         \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mretain_graph\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m         \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0mrunning_loss\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-76-1cfb2f3d2809>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0mprediction\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_len\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprediction\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m         \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mretain_graph\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m         \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0mrunning_loss\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/i2dl_exercise/venv/sample_environment/lib/python3.6/site-packages/torch/tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph)\u001b[0m\n\u001b[1;32m    148\u001b[0m                 \u001b[0mproducts\u001b[0m\u001b[0;34m.\u001b[0m \u001b[0mDefaults\u001b[0m \u001b[0mto\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    149\u001b[0m         \"\"\"\n\u001b[0;32m--> 150\u001b[0;31m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    151\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    152\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mregister_hook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/i2dl_exercise/venv/sample_environment/lib/python3.6/site-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables)\u001b[0m\n\u001b[1;32m     97\u001b[0m     Variable._execution_engine.run_backward(\n\u001b[1;32m     98\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad_tensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 99\u001b[0;31m         allow_unreachable=True)  # allow_unreachable flag\n\u001b[0m\u001b[1;32m    100\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    101\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
@@ -1432,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -1441,13 +1424,96 @@
        "'1.3.0'"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "torch.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vindhya_data_df = pd.read_csv('./recipe_title_foodCategory.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Cake',\n",
+       " 'Salad',\n",
+       " 'Noodles',\n",
+       " 'Hummus',\n",
+       " 'Burger',\n",
+       " 'Steak',\n",
+       " 'Pie',\n",
+       " 'Chicken',\n",
+       " 'Custard',\n",
+       " 'Chips',\n",
+       " 'Casserole',\n",
+       " 'Pasta',\n",
+       " 'Pizza',\n",
+       " 'Omelette']"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(set(vindhya_data_df.Food_Category))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [1,2,3,4,5]\n",
+    "b = ['a','b','c','d','e']\n",
+    "c = ['dil','me','dard','e','disco']\n",
+    "sallu_bhoi = zip(a,b,c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a,b,c = zip(*sallu_bhoi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4, 5])"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.asarray(a)"
    ]
   }
  ],
